[project]
name = "tonle"
version = "0.1.0"
description = "Redis-backed event streams exposed over HTTP polling and SSE."
requires-python = ">=3.13"
readme = "README.md"
keywords = ["redis", "streams", "sse", "http", "starlette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "starlette",
    "uvicorn[standard]",
    "redis[hiredis]",
    "httpx",
    "orjson",
]

[project.scripts]
tonle = "tonle.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=0.26,<1",
    "pytest-xdist>=3,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
